[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = {version = "1.3.2"}
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

